[project]
name = "fastTest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tungliang", email = "tungliang.hannus@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.112.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
